# hotel-booking-service

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  DockerfileTest  README.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml  wait_for_db.py
.github/workflows/: docker-image.yml
src/: manage.py
src/bookings/: models.py  serializers.py  services.py  urls.py  views.py
src/bookings/migrations/: 0001_initial.py
src/core/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
src/core/config/: settings.py
src/rooms/: models.py  serializers.py  services.py  urls.py  views.py
src/rooms/migrations/: 0001_initial.py
tests/: conftest.py  pytest.ini
tests/bookings/: test_models.py  test_serializers.py  test_services.py  test_views.py
tests/rooms/: test_models.py  test_serializers.py  test_services.py  test_views.py
